# natura-infra

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/artifacts/vscode/: settings.json
cdk_stack/: assets_stack.py  base_stack.py  bucket_stack.py  conf.py  dns_stack.py  jobs_stack.py  landing_stack.py
